# agent-os-ai

./: .gitignore  .vscodeignore  ARCHITECTURE.md  EDUCATIONAL_SLIDES.md  LICENSE  PRESENTATION.md  README.md  SHOWCASE_GUIDE.md  package-lock.json  package.json  pyproject.toml  system_schema.json  vitest.config.ts  튜토리얼_비서_연결.md
assets/prompts/: ceo-planner.md  ceo-report.md  decisions-extract.md  system.md
assets/webview/: api-panel.css  api-panel.js  dashboard.css  dashboard.js  revenue-dashboard.js  sidebar.html
docs/: app.js  index.html  styles.css
scripts/: cycle.js  test-jp.sh  test-kr.sh
src/: agents.ts  extension.ts  paths.ts
src/agent-state/: active.ts  autonomy.ts  hired.ts  index.ts  models.ts  rag-mode.ts  tool-config.ts
src/api-connections/: index.ts  services.ts  storage.ts  types.ts
src/approvals/: _fs.ts  bulk.ts  create.ts  index.ts  list.ts  paths.ts  resolve.ts  types.ts
src/brain/: agent-context.ts  agent-glue.ts  graph-builder.ts  graph-html.ts  index.ts  keywords.ts  network-view.ts  rag-context.ts  types.ts  walk.ts
src/calendar/: cache.ts  config.ts  crud.ts  http.ts  index.ts  oauth-setup.ts  token.ts  tracker-sync.ts  types.ts
src/chat/: index.ts  pure-helpers.ts  sessions.ts  sidebar-html.ts
src/codex/: mcp-config.ts
src/commands/: brain.ts  calendar.ts  chat.ts  company.ts  dashboard.ts  dev.ts  index.ts  telegram.ts  tracker.ts  youtube.ts
src/company/: _fs.ts  config.ts  identity.ts  index.ts  metrics.ts  project-meta.ts  structure.ts
src/conversation-log/: index.ts  log.ts
tests/: README.md  sample.spec.ts
(+233 files in other folders)
