[project]
name = "money-ai-workflow"
version = "0.0.0"
description = "Python workflow scripts for money-ai (Instagram/Threads/X uploaders, content pipeline)"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
markers = [
    "integration: 외부 API/네트워크가 필요한 통합 테스트 (기본 제외 권장)",
]
